# daino

./: .ghci  .gitignore  .hlint.yaml  1.txt  README copy.mdold  README.md  README.txt  SSG.cabal  ThemeEngine.cabal  XXpackage.yaml  acceptableLanguageExtension  buildreport.txt  cabal.project  cabal.project.freeze  cabal.project.freeze9.2.5  cabal.project.freeze9.4.4  changelog.md  daino.cabal  ex1.txt  fourmolu.yaml  hie.yaml  hie.yaml.4stack  hie.yaml.cabalold  hie.yaml.old2  latex4bakeOneTexSnip2pdf.aux  latex4bakeOneTexSnip2pdf.out  mkdocs.yml  needs1.txt  oldpackage.yaml  package.yaml  postWithReference.html  postwk.html  report.html  res1.txt  res2.txt  run1.txt  run11.txt  run2.txt  run4.txt  run6.txt  (+15 more)
Lib/: Bake.hs  BibTex.hs  CheckInput.hs  CheckProcess.hs  CmdLineArgs.hs  ConvertFiles.hs  FileMgt.hs  FilesNeeded.hs  Foundation.hs  IndexMake.hs  Indexing.hs  OpenClass.hs  Pandoc.hs  ReadSettingFile.hs  Shake.hs  Shake2.hs  StartSSGprocess.hs  Templating.hs  Watch.hs  YamlBlocks.hs
SSGdesign/: DefaultFileLayout.md  HaskellStyle.md  PackagesUsed.md  PublicationList.md  TransformationOfPost.md  index.md
Slick/: Pandoc.hs
app/: daino.hs  dainoCheck.hsold  prepareTest.hs  ssgBake.hs  ssgCheck.hs
docs/: index.html  index.md  mkdocs.yml  test3.md
docs/site/: 404.html  index.html  resfile.txt  resfile2.txt  resfile4checkProcess.txt  run5.txt  search.html  settings3.yaml  sitemap.xml  templates
docs/site/baked/: .shake.database  landingPage.html
docs/site/checks/: index.docrep  index.panrep
docs/site/dough/: SSGdesign  index.md  indextotest_linked.html  landingPage.md  lastload.txt  out1.txt  settings2.yaml  settings3.yaml  settingsTest.yaml  t2.txt  t3.txt  t4.txt  t4.txt4  t4.txt5  t5.txt  templates~HEAD
docs/site/golden/: .shake.database  index.docrep  (+5 more)
expSite/Minimal/: 02alltxt.md  04german.new  05images.md  06reference.md  07boldTitle.md
experiment_output/: t1.txt
resources/: templatesOrig
resources/templates/: metaplusHtml.dtpl
site/: index.html  styley.css
site/baked/: postwk.html
site/docs/: index.html
site/dough/: index.md  landingPage.md  master.md.settings  master.yaml  masterSettings.md  masterTest.docval  masterTest.html  masterTest.yaml  pageSettings.md  postWithReference.md  settings.md_old  settings.yaml  settings2.yaml
site/parked/: index.md
site/resources/: BibTexLatex.bib
site/search/: search_index.json
site/site/: index.html
src/: ClassMain.hs  serverSG.hs  sgg10.hs  ssg10.hs  ssgBake.hs  ssgCheck.hs  watch4bake.hs
src/Foundational/: CmdLineFlags.hs  Filetypes4sites.hs  Foundation.hs  LayoutFlags.hs  MetaPage.hs  MetaPage.hsold  SettingsPage.hs
src/Lib/: Bake.hs  CheckInput.hs  CheckProcess.hs  CheckProcess.hsold  CmdLineArgs.hs  ConvertFiles.hs  Foundation.hs  IndexCollect.hs  IndexMake.hs  IndexMake.hsold  Indexing.hs  MetaPage.hs  Pandoc.hs  ReadSettingFile.hs  Shake2.hs  StartSSGprocess.hs  Templating.hs  Templating.hsold  Watch.hs
src/ShakeBake/: Bake.hs  Bake.hsold  CmdLineArgs.hs  ConvertFiles.hs  ConvertFiles.hsold  ReadSettingFile.hs  Shake2.hs  Shake2aux.hs  Shake2docrep.hs  Shake2html.hs  Shake2indexes.hs  Shake2latex.hs  Shake2panrep.hs  Shake2start.hs  StartDainoProcess.hs  StartSSGprocess.hs  Watch.hs
src/Uniform/: Docrep.hs  Filetypes4sites.hs  HTMLout.hs  Markdown.hs  Panrep.hs  ProcessPDF.hs
src/Uniform2/: BibTex.hs  Docrep.hs  Filetypes4sites.hs  HTMLout.hs  Markdown.hs  Panrep.hs  ProcessPDF.hs
src/Wave/: Doc2html.hs  Docrep.hs  Docrep2panrep.hs  Markdown.hs  Md2doc.hs  Pan2html.hs  Pan2texsnip.hs  Panrep.hs  Panrep2.hs  Panrep2html.hs  Panrep2pdf.hs
test/: ExampleTesting.hs  ShakeStartTests.hs
test/Lib/: Bake_test.hs  BibTex_test.hs  CheckInputs_test.hs  FileMgt_test.hs  Foundation_test.hs  IndexMake_test.hs  Indexing_test.hs  OpenClass_test.hs  Pandoc_test.hs  ReadSettingFile_test.hs  ReadSetting_test.hs  Shake2_test.hs  Shake_test.hs  Templating_test.hs  YamlBlocks_test.hs
tests/: ExampleTesting.hs  ShakeStartTests.hs  Testing.hs  testRun.hs  testing.hs
tests/Lib/: Bake_test.hs  CheckInputs_test.hs  CheckProcess_test.hs  CmdLIneArgs_test.hs  CmdLineArgs_test.hs  Doc2html_test.hs  Docrep2panrep_test.hs  Example_test.hs  Example_test.hsorig  Foundation_test.hs  IndexCollect_test.hs  IndexMake_test.hs  IndexMake_test.hsold  Indexing_test.hs  Markdown_test.hs  Md2doc_test.hs  Pan2html_test.hs  Pandoc_test.hs  Panrep2_test.hs  Panrep2html_test.hs  Panrep2pdf_test.hs  ReadSettingFile_test.hs  ReadSettingFile_test.hsold  Shake2_test.hs  Template_test.hs  Template_test.hsold  Templating_test.hs
tests/data/: htmlTufte63.dtpl  latexTufte63.dtpl  metaplusHtml.dtpl  settingsTest.yaml  v1_latexTufte63.dtpl  v3_htmlTufte63.dtpl
tests4run/: testRun.hs
tests4run/Lib/: DainoTest_test.hs
tests4run/data/: latexTufte63.dtpl  metaplusHtml.dtpl
tests4run/oldTemplates/: tufte633html.dtplold
theme/: preface.md
theme/oldtemplates/: Page1.html  Page2.html
theme/templates/: Master2.gtpl  Master2_Page2.dtpl  Master3.dtpl  Master3.gtpl  Master32.gtpl  Master3_Page3.dtpl  Page3.dtpl  Page4tufte.dtpl  af-tufte-book.cls  af-tufte-common.def  af-tufte-handout.cls  af_tufte64_26latex.dtpl  aftufte6426latex.dtpl  aftufte6426latex167.dtpl  default.html5  htmlDaino63.dtpl  latexDaino63.dtpl  master1.html  master4.dtpl  master5.dtpl  menu.css  page0default.yaml  page3.yaml  page33.dtpl  page4tufte.yaml  pandoc64html.dtpl  pandoc64latex.dtpl  pandocDefault.html  style.css  test63html.dtpl  test63latex.dtpl  tufte-common.def  tufte-handout.cls  tufte633latex.dtpl  tufte6426latex.dtpl  tufte64_26latex.dtpl  tufte64html.dtpl  tufte64latex.dtpl
unused/: CheckProcess.hs  CheckProcess_test.hs  IndexMake.hs  IndexMake_test.hs  Indexing.hs  Indexing_test.hs  hie.yamlOLD
unused haskell/: CheckProcess.hs  Pan2texsnip.hs  ProcessPDF.hs  master4.dtpl
unused haskell/Uniform2/: HTMLout.hs
unusedHaskellSources/: Bake_test.hs  CheckInputs_test.hs  CheckProcess_test.hs  Foundation_test.hs  Indexing_test.hs  ReadSettingFile_test.hs  Shake2_test.hs  Templating_test.hs
unusedPandocLib/: Pandoc.hs  Pandoc1.hs
(+220 files in other folders)
