name: SSG
version: 0.0.1
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Lib.Bake
        Lib.Shake2
        -- Lib.Shake
        -- Lib.FileMgt
        Lib.Templating
        Lib.Pandoc
        Lib.Foundation
        Lib.ReadSettingFile
        Lib.Indexing
        -- Lib.BibTex
        -- Lib.YamlBlocks
        Lib.CheckInput
    hs-source-dirs: .
    other-modules:
        Paths_SSG
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base == 4.*
        ,  uniform-algebras -any
        ,  uniform-strings -any
        ,  uniform-shake
        ,  uniform-fileio==0.0.14.3
        , uniform-error -any
        , uniform-time -any
        , uniform-json -any
        , uniform-pandoc
        , uniform-convenience -any
        -- pandoc -any,
        -- pandoc-citeproc -any,
        -- pandoc-types -any,
        -- doctemplates -any,
        -- aeson -any,
        -- lens-aeson -any,
        -- lens -any,
        -- aeson-pretty -any,
        -- yaml-union -any,
        -- shake -any
        -- path==0.6.1.1

        -- shake-path
        -- yaml -any,
        -- bibtex ==0.1.0.8,
        -- directory -any
        -- containers -any,
        -- unordered-containers -any

executable ssgbake
    main-is: ssgBake.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error
        , uniform-shake
        ,uniform-webserver  
        , uniform-watch 
        , SSG -any
        -- shake ==0.17.6,
        -- scotty -any,
        -- warp -any,
        -- wai-middleware-static -any

-- executable ssg10
--     main-is: ssg10.hs
--     hs-source-dirs: src
--     default-language: Haskell2010
--     build-depends:
--         base ==4.*,
--         uniform-strings -any,
--         uniform-convenience -any,
--         uniform-fileio -any,
--         uniform-error -any,
--         SSG -any

executable serversg
    main-is: serverSG.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error -any,
        uniform-watch , 
        uniform-webserver,
        SSG 
        -- SSG -any,
        -- scotty -any,
        -- warp -any,
        -- wai-middleware-static -any
        -- twitch -any

test-suite ssgTest
    type: exitcode-stdio-1.0
    main-is: ExampleTesting.hs
    hs-source-dirs: test
    other-modules:
        ShakeStartTests
        Lib.Bake_test
        Lib.Foundation_test
        Lib.Pandoc_test
        Lib.Templating_test
        Lib.ReadSettingFile_test
        Lib.Indexing_test
        Lib.CheckInputs_test
        Lib.Templating_test
        Lib.Indexing_test
        Lib.Shake_test
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        HTF -any,
        QuickCheck -any,
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error -any,
        uniform-time -any,
        uniform-json,
        uniform-pandoc,
        uniform-webserver,
        uniform-shake,
        uniform-watch ,

        
        SSG -any
        -- , directory -any 
        -- doctemplates -any,
        -- , shake -any
        -- , path==0.6.1.1
        -- pandoc -any,
        -- lens-aeson -any,
        -- lens -any,
        -- aeson -any,
        -- aeson-pretty -any,
        -- yaml-union -any,
        -- bibtex ==0.1.0.8,
        -- time -any,
        -- test-framework -any
