name: SSG
version: 0.0.1
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Lib.Bake
        Lib.Shake2
        -- Lib.Shake
        -- Lib.FileMgtw
        Lib.Templating
        Lib.Pandoc
        Lib.Foundation
        Lib.ReadSettingFile
        Lib.Indexing
        Lib.IndexMake
        -- Lib.BibTex
        -- Lib.YamlBlocks
        Lib.CheckInput
        Lib.CmdLineArgs
        Lib.Watch
        -- Paths_SSG
        
    hs-source-dirs: .
    other-modules:
        Paths_SSG
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base == 4.*
        ,  uniform-algebras -any
        ,  uniform-strings -any
        ,  uniform-shake
        ,  uniform-fileio==0.0.14.3
        , uniform-error -any
        , uniform-time -any
        , uniform-json -any
        , uniform-pandoc
        , uniform-convenience -any
        , uniform-watch 
        , uniform-webserver

        , optparse-applicative
        , optparse-generic
        -- , pandoc-types


executable ssgbake
    main-is: ssgBake.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-cmdLineArgs,
        uniform-fileio -any,
        uniform-error
        , uniform-shake
        ,uniform-webserver  
        -- , uniform-watch 
        , SSG -any
 
-- executable ssg10
--     main-is: ssg10.hs
--     hs-source-dirs: src
--     default-language: Haskell2010
--     build-depends:
--         base ==4.*,
--         uniform-strings -any,
--         uniform-convenience -any,
--         uniform-fileio -any,
--         uniform-error -any,
--         SSG -any

test-suite ssgTest
    type: exitcode-stdio-1.0
    main-is: ExampleTesting.hs
    hs-source-dirs: test
    other-modules:
        ShakeStartTests
        Lib.Bake_test
        Lib.Foundation_test
        Lib.Pandoc_test
        Lib.Templating_test
        Lib.ReadSettingFile_test
        Lib.Indexing_test
        Lib.IndexMake_test
        Lib.CheckInputs_test
        Lib.Templating_test
        Lib.Indexing_test
        Lib.Shake2_test
        -- Lib.CmdLineArgs_test
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        HTF -any,
        QuickCheck -any,
        base ==4.*,
        uniform-algebras, 
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error -any,
        uniform-time -any,
        uniform-json,
        uniform-pandoc,
        uniform-webserver,
        uniform-cmdLineArgs,
        uniform-shake,
        uniform-watch ,
        SSG -any

