name: SSG
version: 0.0.3.0
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
description: a static site generator
    version 0.0.2.0  used for myhomepage  - fixes
    0.0.2.1 add check for all pages, study content pdf, tex
    0.0.3.0 copy all structure (exclude with DNB)

library
    exposed-modules:
        Lib.Bake
        Lib.StartSSGprocess
        Lib.Shake2
        -- Lib.FilesNeeded
        Lib.ConvertFiles
        -- Lib.Shake
        -- Lib.FileMgtw
        Lib.Templating
        Lib.Pandoc
        Lib.Foundation
        Lib.ReadSettingFile
        Lib.Indexing
        Lib.IndexMake
        -- Lib.BibTex
        -- Lib.YamlBlocks
        Lib.CheckInput
        Lib.CmdLineArgs
        Lib.Watch
        -- Paths_SSG
        Lib.CheckProcess
        
    hs-source-dirs: .
    other-modules:
        Paths_SSG
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base == 4.*
        ,  uniform-algebras -any
        ,  uniform-strings -any
        ,  uniform-shake
        , shake
        , pipes
        , containers

        ,  uniform-fileio ==0.0.15.1 
        , uniform-error -any
        , uniform-time -any
        , uniform-json -any
        , uniform-pandoc
        , uniform-convenience 
        , uniform-watch 
        , uniform-webserver
        , uniform-ftp

        , optparse-applicative
        , optparse-generic
        -- , pandoc-types


executable ssgbake
    main-is: ssgBake.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-cmdLineArgs,
        uniform-fileio -any,
        uniform-error
        , uniform-shake
        ,uniform-webserver  
        , uniform-ftp ==0.0.1.4
        , uniform-time
        -- , uniform-watch 
        , SSG -any
        , shake
        -- , pipes
 
executable ssgCheck
    main-is: ssgCheck.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error -any,

        -- uniform-piped,
        SSG -any,
        pipes

test-suite ssgTest
    type: exitcode-stdio-1.0
    main-is: Testing.hs
    hs-source-dirs: tests
    other-modules:
        ShakeStartTests
        Lib.Bake_test
        Lib.Foundation_test
        Lib.Pandoc_test
        Lib.Templating_test
        Lib.ReadSettingFile_test
        Lib.Indexing_test
        Lib.IndexMake_test
        Lib.CheckInputs_test
        Lib.Templating_test
        Lib.Indexing_test
        Lib.Shake2_test
        Lib.CheckProcess_test
        -- Lib.CmdLineArgs_test
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        HTF -any,
        QuickCheck -any,
        base ==4.*,
        uniform-algebras, 
        uniform-strings -any,
        uniform-convenience -any,
        uniform-fileio -any,
        uniform-error -any,
        uniform-time -any,
        uniform-json,
        uniform-pandoc,
        uniform-webserver,
        uniform-cmdLineArgs,
        uniform-shake,
        shake,
        pipes,
        uniform-watch ,
        uniform-time,
        uniform-ftp ,
        SSG -any

